css/main.css
/* ... */
.vid {
    width: 100%;
    height: 200px;
   /* background-color: green;
    float: right;
    margin-right:5em;*/
}

.subheader {
    font-family: 'Roboto Slab', sans-serif;
    font-style: bold;
    color: white;
    /*text-align: center;*/
    text-transform: uppercase;

}

.secondary-header {
    font-family: 'Big John';
    text-transform: uppercase;
    color: #da465e;
    /*text-align: center;*/
    font-size: 4em;
    margin-left: -2%;
}

.btn {
    color: #a06e1f;
    border: 5px solid #da465e;
    margin: 0 auto;
    padding: 1em;
    margin-bottom: 3em;
    font-size: 1.1em;
    text-align: center;
    width: 90%;
    background-color: transparent;

    /*btn animation*/
    position: relative;
  display: inline-block;
  -webkit-transition: color .5s;
          transition: color .5s;
}

.btn:before {
  content: '';
  position: absolute;
  top: 0; 
  left: 0;
  width: 100%; 
  height: 100%;
  background: #da465e;
  z-index: -1;
  -webkit-transform:scaleX(0);
      -ms-transform:scaleX(0);
          transform:scaleX(0);
  -webkit-transition: -webkit-transform .5s;
          transition:         transform .5s;
}

.btn:hover {
  color: #fff;
}

.btn:hover:before {
  -webkit-transform: scaleX(1);
      -ms-transform: scaleX(1);
          transform: scaleX(1);
}


/* ==========================================================================
   PHONE
   ========================================================================== */
@media only screen and (min-width: 20em) {
    /* Style adjustments for viewports that meet the condition */
    body {
        background-color: black;
    }

    .title {
        font-size: 35pt;
        text-align: left;
        letter-spacing: 3px;
        width: 275px;
        margin: 0 auto;
    }
    .title-2 {
        font-size: 48pt;
        text-align: left;
        letter-spacing: 3px;
        line-height: 0em;
        font-family: 'Big John';
    }

    .title-3 {
        font-size: 35pt;
        /*padding-top:3em;*/
        text-align: left;
        letter-spacing: 3px;
        line-height: 0em;
        font-family: 'Big John';
    }

    .info {
        font-size: 1em;
        text-align: left;
        margin: 0;
        padding-bottom: 2em;
    }
    .info2 {
        width: 70%;
        font-size: 15pt;
    }
    .vid {
        margin-bottom: 1.5em;
        width: 100%;
    }
    .secondary-header {
        text-align: left;
        font-size: 40pt;
        /*margin-left: .5em;*/
        line-height: 1em;
    }
    
    .subheader {
        width: 50%;
        font-weight: bolder;
        margin-bottom: 1.5em;
    }
    .inner-container {
        padding-left: 1em;
    }

    #container-2 {  
        text-align: left;
    }

    .headline {
        font-size: 16.5pt;
        font-weight: bold;
        line-height: 0;
        margin-bottom: 1.5em;
    }
    .title-3.headline {
        font-size: 15pt;
        line-height: 1em;
    }
    .banner {
        /*height: 20em;*/
        width: 100%;
        /*float: left;*/
        display: inline-block;
        margin-bottom: -5px;
    }

    #pink {
        background-color: #da465e;
        height: 11em;
    }

    .card {
        background-color: white;
        width: 100%;
    }
    .header-3 {
        font-family: 'Big John';
        text-transform: uppercase;
        color: #da465e;
        font-size: 40pt;
    }
    .subheader-2 {
        color: #a06e1f;        
        font-size: 1.1em;       
        font-family: 'Roboto Slab', sans-serif;
        font-size: 20pt;
    }
    .link {
        text-decoration: none;
        text-transform: uppercase;
        font-family: 'Big John';
        font-size: 30pt;
    }

    .pink {
        color: #da465e;
        font-family: 'Big John';
        display: block;
        font-size: 30pt;
    }
    .coral {
        background-image: url(../img/12-Safari-Pattern-All-Sections.png);
        background-repeat: no-repeat;
        background-size: cover;
        padding: 4em 0 3em 0;
        z-index: -1;
    }

    #brown {
        background-color: #a26e1f;
        padding: 2em 0;
    }

    .bold {
        font-weight: bold;
    }
    .contained {
        /*width: 90%;*/
        /*float: right;*/
        /*margin-left: 4em;*/
        /*padding-bottom: 1em;*/
        padding-left: 3em;
    }
    .learn {
        font-size: 14pt;
        padding-bottom: 1em;
        border-bottom: 3px solid white;
    }
    .price {
        font-family: 'Big John';
        font-size:16pt;
    }
    .dandy-man {
        background-image: url(../img/5-Mobile-Dandy-Man.jpg);
        position: absolute;
        height: 100%;
        width: 188px;
        right: 0;
        background-repeat: no-repeat;
        z-index: -1;
    }
    .mobile-fashion {
        background-image: url(../img/10-Mobile-Fashion.png); 
        position: absolute;
        width: 321px;
        height: 386px;
        display: block;
        
        background-repeat: no-repeat; 
    }

    #black {
        background-color: black;
        height: 386px;
    }
    .photo {
        height: auto;
        width: 90%;
        position: relative;
        top: -150px;
    }
    .banner:last-of-type {
        margin-bottom: 1em;
    }
    .carousel-image {
        width: 100%;
        height: 200px;
    }

}

@media only screen and (min-width: 50em) {
    /* Style adjustments for viewports that meet the condition */

}

